[package]
name = "tracing-dipstick"
version = "0.2.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Bridge from tracing instrumentation to the dipstick metrics library"
documentation = "https://docs.rs/tracing-dipstick"
repository = "https://github.com/vorner/tracing-dipstick"
readme = "README.md"
keywords = ["tracing", "dipstick", "metrics"]
categories = ["development-tools::debugging", "development-tools::profiling"]
edition = "2021"
license = "Apache-2.0/MIT"

[dependencies]
dipstick = "0.9"
once_cell = "1"
tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[dev-dependencies]
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", default-features = true, features = ["log-always"] }
